--- a/css/index.css
+++ b/css/index.css
@@ -128,6 +128,7 @@ a:hover {
 }
 
 .card-cat {
+    background-color: #135040;
     filter: grayscale(1);
     transition: 330ms ease-out;
     display: flex;
@@ -135,6 +136,19 @@ a:hover {
     align-items: center;
     height: 100%;
     flex-direction: column;
+}
+
+.card-cat > *{
+    z-index: 1;
+}
+
+.card-cat__bg{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    z-index: 0;
 }
 
 .card-cat:hover {
@@ -247,7 +261,7 @@ a:hover {
     margin-bottom: 2rem;
 }
 
-.process__title div{
+.process__title div {
     display: table;
     padding: 0 1rem;
     margin-bottom: .25rem;
@@ -318,12 +332,12 @@ a:hover {
 @media (min-width: 992px) {
     .process {
         transition: 330ms ease-out;
-        filter: grayscale(1);
+        /* filter: grayscale(1); */
     }
 
-    .process:hover {
+    /* .process:hover {
         filter: grayscale(0);
-    }
+    } */
 
     .process__title {
         font-size: 40px;
@@ -404,4 +418,167 @@ a:hover {
     .process__item:hover .process__item-btn i {
         margin-right: .75rem;
     }
+}
+
+/* price */
+
+.price {
+    margin: 2.5rem 0;
+}
+
+.price__title {
+    font-size: 30px;
+    font-weight: bolder;
+    text-align: center;
+    color: #322e30;
+    margin-bottom: 2rem;
+}
+
+.price__body {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -3px;
+    margin-left: -3px;
+}
+
+.price__card {
+    flex: 0 0 calc(100% / 4);
+    padding: 0 3px;
+    position: relative;
+    transition: 550ms ease-out;
+}
+
+.price__card::before {
+    content: "";
+    position: absolute;
+    background-color: #135040;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
+    transition: 660ms ease-out;
+    clip-path: circle(0);
+}
+
+.price__card:hover::before {
+    clip-path: circle(90%);
+}
+
+.price__card-content {
+    background-color: #fff;
+    padding: 1rem 2rem;
+}
+
+.price__card-content>* {
+    position: relative;
+    z-index: 1;
+}
+
+.price__card-title {
+    font-size: 26px;
+    font-weight: bolder;
+    text-align: center;
+    color: #322e30;
+    margin: 2rem 0 1rem;
+    transition: 660ms ease-out;
+}
+
+
+
+.price__card-subtitle {
+    font-size: 16px;
+    font-weight: lighter;
+    text-align: justify;
+    color: #322e30;
+    transition: 660ms ease-out;
+    /* margin: 0 .5rem .5rem; */
+}
+
+.price__card-options {
+    padding: 0;
+}
+
+.price__card-option {
+    font-weight: bold;
+    font-size: 15px;
+    display: flex;
+    align-items: baseline;
+    line-height: 2;
+    margin: 1rem 0;
+}
+
+.price__card-option i {
+    margin-left: .5rem;
+    color: #135040;
+}
+
+.price__card-price {
+    font-size: 30px;
+    text-align: center;
+    color: #135040;
+    font-weight: bold;
+    margin-bottom: 1rem;
+}
+
+.price__card:hover .price__card-title,
+.price__card:hover .price__card-subtitle,
+.price__card:hover .price__card-option,
+.price__card:hover .price__card-option i,
+.price__card:hover .price__card-price,
+.price__card:hover hr,
+.price__card:hover .price__card-btn button {
+    color: #fff !important;
+    border-color: rgba(256, 256, 256, 0.5);
+}
+
+
+/* footer */
+
+footer.footer {
+    background-color: #2a2a2a;
+    color: #e6e6e6;
+    padding: 3rem 0 1.5rem;
+}
+
+.footer__top-logo {
+    width: 50px;
+    margin: 0 auto;
+}
+
+.footer .main-menu__link {
+    color: #e6e6e6;
+    font-weight: normal;
+}
+
+.footer__social {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.footer__social a {
+    font-size: 1.5rem;
+    margin: 0 .5rem;
+}
+
+.footer__social a .fa-dribbble{
+    color: crimson;
+}
+
+.footer__social a .fa-facebook{
+    color: #01a9b4;
+}
+
+.footer__social a .fa-github{
+    color: #fff;
+}
+
+.footer__down {
+    padding-top: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
